# dwdsmor

./: .dir-locals.el  .env.shared  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .projectile  AUTHORS  CHANGELOG.md  ChangeLog.md  MANIFEST.in  Makefile  Makefile.SMORLemma  README.md  SMORLemma.mk  build-dwdsmor  dwdsmor-analyze.py  dwdsmor-paradigm.py  dwdsmor.py  generate-adjective-paradigm.py  generate-name-paradigm.py  generate-noun-paradigm.py  generate-verb-paradigm.py  paradigm.py  pyproject.toml  requirements.dev.txt  requirements.dwds.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml  release-please.yml  test.yml
dwdsmor/: __init__.py  analysis.py  automaton.py  cli.py  grammar.py  log.py  spacy.py  tag.py  traversal.py  util.py
dwdsmor/cli/: analyse.py  generate.py
dwdsmor/lexicon/: cli.py  nouns.py  xml.py
dwdsmor/tag/: __init__.py  hdt.py
dwdsmor/tools/: analysis.py  paradigm.py
grammar/: ChangeLog.md  Makefile  cap.fst  cleanup.fst  disj.fst  dwdsmor-finite.fst  dwdsmor-index.ca  dwdsmor-index.fst  dwdsmor-lemma.fst  dwdsmor-minimal.ca  dwdsmor-minimal.fst  dwdsmor-morph.fst  dwdsmor-root.fst  dwdsmor.fst  elim.fst  finite.fst  flexion.fst  index.fst  infl.fst  lemma-index.fst  lemma.fst  lemma2.fst  level.fst  macro_boundaries-lemma2.fst  macro_boundaries-morph.fst  macro_boundaries-root.fst  macro_boundaries-root2.fst  macro_boundaries.fst  macro_cap.fst  macro_ch.fst  macro_comp-finite.fst  macro_comp-num-finite.fst  macro_comp-num-root.fst  macro_comp-num.fst  macro_comp.fst  macro_conv-adj-phon.fst  macro_conv-adj-postinfl.fst  macro_conv-adj-postphon.fst  macro_conv-adj-postwf.fst  macro_conv-adj-root.fst  (+62 more)
hlrn/: build  setup
legacy/fitschen/: BIBL  Stylesheet-DeKo-auslesen.xsl  Stylesheet-NVA-auslesen.xsl  ersetzungen.xml
legacy/morphisto/: COPYING  lexicon-transform.xslt
lexicon/: .gitignore  Makefile  deps.edn  exclude.list  exclude.xml  generate-lexicon
lexicon/aux/: adjectives.xml  adpositions.xml  adverbs.xml  articles.xml  conjunctions.xml  forenames.xml  interjection.xml  nouns-wf.xml  nouns.xml  numerals.xml  particles.xml  pronouns.xml  pseudonames.xml  verbs.xml
lexicon/dev/wb/: dev.xml
lexicon/dwds/: Makefile  exclude.xml
lexicon/dwds/aux/: adjectives.xml  adpositions.xml  adverbs.xml  articles.xml  conjunctions.xml  forenames.xml  nouns.xml  numerals.xml  pronouns.xml  pseudonames.xml  verbs.xml
lexicon/dwds/package/: VERSION  pyproject.toml
lexicon/open/src/: Makefile  aux
lexicon/open/src/wb/: .gitignore
lexicon/open/wb/: open.xml
lexicon/sample/: Makefile  aux  exclude.xml
lexicon/sample/src/: Makefile
lexicon/sample/wb/: dwds.xml
lexicon/src/: logback.xml
lexicon/src/dwdsmor/: lexicon.clj  smorlemma.clj
lexicon/test/input/: adjectives.list  adjectives.xml  adverbs.list  adverbs.xml  names.list  names.xml  nouns.list  nouns.xml  verbs.list  verbs.xml
samples/: lexicon.lex  lexicon.xml
scripts/: build  ud-german-hdt-coverage  wb-coverage
share/: ChangeLog.md  categories.xsl  dwds.xsl  dwds2dwds.xsl  dwds2dwdsmor.xsl  dwds2lexicon.xsl  dwds2manifest.xsl  dwds2smor.xsl  dwds2smorlemma.xsl  entries.xsl  files.xsl  forms.xsl  lexicon2dwdsmor.xsl  mappings.xsl  strings.xsl
test/: Makefile  conftest.py  dwds.py  dwds_coverage.py  inflection_test_cases.csv  numeral_test_cases.csv  snapshot.py  test_automata.py  test_dwds_lemma_coverage.py  test_dwds_lemmas.py  test_dwds_paradigm_coverage.py  test_gesetze_analysis_snapshot.py  test_lemmatizer.py  test_numeral.py  test_paradigm_snapshot.py  test_paradigms.py  test_regression.py  test_sample_lemma_coverage.py  test_sample_lemmas.py  test_sample_paradigm_coverage.py  test_spacy.py  test_traversal.py  test_tuebadz_coverage.py  test_tuebadz_lemma_coverage.py  test_tuebadz_lemmas.py  tuebadz.py  tuebadz_coverage.py
test-data/: .gitignore
test/__snapshots__/: test_regression.ambr  test_spacy.ambr
test/data/: .gitignore  tuebadz.dvc
test/gesetze/: BJNR048510022.tok  BJNR397000994.tok
test/reports/: .gitignore  adjective-paradigm-snapshot.tsv  adjective-paradigms.tsv  article-paradigm-snapshot.tsv  article-paradigms.tsv  cardinal-paradigm-snapshot.tsv  cardinal-paradigms.tsv  demonstrative-pronoun-paradigm-snapshot.tsv  demonstrative-pronoun-paradigms.tsv  fraction-paradigm-snapshot.tsv  gesetze-analysis-snapshot.tsv  indefinite-pronoun-paradigm-snapshot.tsv  indefinite-pronoun-paradigms.tsv  interrogative-pronoun-paradigm-snapshot.tsv  interrogative-pronoun-paradigms.tsv  name-paradigm-snapshot.tsv  name-paradigms.tsv  noun-paradigm-snapshot.tsv  ordinal-paradigm-snapshot.tsv  ordinal-paradigms.tsv  personal-pronoun-paradigm-snapshot.tsv  possessive-pronoun-paradigm-snapshot.tsv  relative-pronoun-paradigm-snapshot.tsv  verb-paradigm-snapshot.tsv  verb-paradigms.tsv
test/summaries/: .gitignore
tests/: Makefile  conftest.py  dwds.py  fixtures.py  test_coverage.py  test_dwds_coverage.py  test_lemma.py  test_sample_coverage.py  test_tuebadz_coverage.py  test_tuebadz_lemmatisation.py  tuebadz.py
tests/fixtures/: __init__.py
tools/: analysis.py  paradigm.py
