[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dwdsmor"
description = "SFST/SMOR/DWDS-based German morphology"
authors = [
    {name = "Andreas Nolda", email = "andreas.nolda@bbaw.de"},
    {name = "Gregor Middell", email = "gregor.middell@bbaw.de"}
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic"
]
requires-python = ">=3.9"
dynamic = ["readme", "version"]
dependencies = [
    "huggingface_hub[cli]",
    "python-dotenv",
    "sfst-transduce",
    "tabulate",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "conllu",
    "datasets",
    "flake8",
    "flake8-bugbear",
    "mypy",
    "pre-commit",
    "pytest",
    "syrupy",
    "tqdm",
    "Jinja2",
    "de_hdt_lg @ https://huggingface.co/zentrum-lexikographie/de_hdt_lg/resolve/main/de_hdt_lg-any-py3-none-any.whl#sha256=44bd0b0299865341ee1756efd60670fa148dbfd2a14d0c1d5ab99c61af08236a"]

[project.scripts]
dwdsmor = "dwdsmor.cli:main"

[project.urls]
Homepage = "https://github.com/zentrum-lexikographie/dwdsmor"

[tool.coverage.run]
omit = ["dwdsmor/cli.py", "test/**/*.py"]

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = "datasets"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "huggingface_hub"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "huggingface_hub.utils"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tabulate"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tqdm"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [ "test"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "dwdsmor.version.__version__"}

[tool.setuptools.packages.find]
exclude = ["test"]
