[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dwdsmor"
description = "SFST/SMOR/DWDS-based German morphology"
authors = [
    {name = "Andreas Nolda", email = "andreas.nolda@bbaw.de"},
    {name = "Gregor Middell", email = "gregor.middell@bbaw.de"}
]
license = "GPL-2.0-only"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic"
]
requires-python = ">=3.12"
dynamic = ["readme", "version"]
dependencies = [
    "blessings",
    "sfst-transduce",
    "tabulate",
    "tqdm"
]

[project.optional-dependencies]
dev = [
    "build",
    "coverage",
    "conllu",
    "de_zdl_lg",
    "flake8",
    "flake8-bugbear",
    "mypy",
    "pre-commit",
    "pytest",
    "spacy",
    "syrupy",
    "twine",
    "Jinja2"
]
dwds = [
    "dwdswb-dataset @ git+https://gitup.uni-potsdam.de/zentrum-lexikographie/dwdswb-dataset.git"
]

[project.scripts]
dwdsmor = "dwdsmor.cli:main"

[project.urls]
Homepage = "https://github.com/zentrum-lexikographie/dwdsmor"

[tool.coverage.run]
omit = ["dwdsmor/cli.py", "test/**/*.py"]

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = "tabulate"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tqdm"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [ "test"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "dwdsmor.version.__version__"}

[tool.setuptools.packages.find]
exclude = ["test"]

[tool.setuptools.package-data]
"dwdsmor.automata" = ["*.a", "*.ca", "*.csv.xz", "BUILT", "EDITION", "GIT_REV"]
